--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p class="counter"></p>
+<div class="container-fluid bg-dark text-white h-100">
+    <div class="row h-100 justify-content-center align-items-center d-flex flex-column">
+        <h1 class="row display-3">До ЕГЭ:</h1>
+        <h1 class="row counter display-4"></h1>
+    </div>
+</div>
 {% endblock content %}
 
 {% block scripts %}
